Hid scrollbar, fixed alignment issues, removed redundant section header.

--- a/vue-page/src/style.css
+++ b/vue-page/src/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap');
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -28,6 +30,10 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+}
+
+body {
+  font-family: "Roboto Slab", serif;
 }
 
 h1 {
